fix: 6239 Policy ID copy icon and flyout menu readability

--- a/frontend/src/app/modules/policy-engine/policy-configuration/policy-settings-drawer/policy-settings-drawer.component.scss
+++ b/frontend/src/app/modules/policy-engine/policy-configuration/policy-settings-drawer/policy-settings-drawer.component.scss
@@ -181,6 +181,10 @@
         color: var(--pc-readonly-text-color, var(--guardian-disabled-color, #848FA9));
     }
 
+    .grid-setting[readonly="true"] {
+        filter: none;
+    }
+
     .properties .propHeader > .propHeaderCell.cellName span {
         display: inline-block;
         vertical-align: middle;
@@ -279,6 +283,17 @@
     .properties .propRowCell > .readonly-prop--copy {
         border: none;
         background: transparent;
+        cursor: default;
+    }
+
+    .grid-setting[readonly="true"] .properties .propRowCell > .readonly-prop--copy {
+        color: var(--pc-readonly-text-color, var(--guardian-disabled-color, #848FA9));
+    }
+
+    .properties .propRowCell > .readonly-prop--copy .pi {
+        pointer-events: auto;
+        cursor: pointer;
+        color: var(--pc-active-icon-color, var(--color-primary, #4169E2));
     }
 
     .properties .propRowCell > input.prop-input[readonly] {
